# llms_ftw

./: .gitignore  RUN_INSTRUCTIONS.md  direct_testing.slurm  main.py  parsing_op.ipynb  pyproject.toml  readme.md  requirement.txt  run_main.slurm  run_with_config.slurm
config/: config.yaml  direct_test_config.yaml
expe/: full_pipeline.py  launch_pipeline.py
old_cache/: phase1_simTrue_libformatted_solutions_solvers.json
plots/: arc_agi_leaderboard.csv  plotting.ipynb
src/: analyze_results.ipynb  direct_testing.py  llm_client.py  main.py  main_new.py  main_utils.py  outline.md  testing.ipynb  validity.ipynb  verify_solvers.ipynb  vlm_client.py  vlm_prompter.py
src/utils/: arc_types.py  colors.py  constants.py  dsl.py  formatted_solutions.py  grid_renderer.py  helper.py  library.py  library_caching.py  program_conversion_helper.py  render_legacy.py  solvers.py  solvers_overfit_23.py  task_loader.py
test/: test.ipynb
