[project]
name = "llms-ftw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "numpy>=2.3.4",
    "pillow>=12.0.0",
    "ptyprocess>=0.7.0",
    "pydantic>=2.12.4",
    "pygments>=2.19.2",
    "pyzmq>=27.1.0",
    "requests>=2.32.5",
]
